// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuAction renders component 1`] = `
<Fragment>
  <ForwardRef
    className="button-mock"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <Component
      className="icon-mock"
      fontSize="inherit"
      src="icon"
    />
  </ForwardRef>
  <Component
    offset={0}
    open={false}
    placement="bottom-end"
  >
    <ForwardRef(ClickAwayListener)
      onClickAway={[Function]}
    >
      <ForwardRef(MenuList)
        className="menuList-mock"
      >
        <Memo(WithStyles(MenuActionItem))
          close={[Function]}
          key=".0"
          onClick={[MockFunction]}
          title="test"
        />
        <Memo(WithStyles(MenuActionItem))
          close={[Function]}
          key=".1"
          onClick={[MockFunction]}
          title="test 2"
        />
      </ForwardRef(MenuList)>
    </ForwardRef(ClickAwayListener)>
  </Component>
</Fragment>
`;

exports[`MenuAction renders with optional props 1`] = `
<Fragment>
  <ForwardRef
    className="button-mock"
    disableRipple={true}
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <Component
      className="icon-mock"
      fontSize="inherit"
      src="icon"
    />
  </ForwardRef>
  <Component
    offset="0 20"
    open={false}
    placement="bottom-end"
  >
    <ForwardRef(ClickAwayListener)
      onClickAway={[Function]}
    >
      <ForwardRef(MenuList)
        className="menuList-mock"
      >
        <Memo(WithStyles(MenuActionItem))
          close={[Function]}
          key=".0"
          onClick={[MockFunction]}
          title="test"
        />
        <Memo(WithStyles(MenuActionItem))
          close={[Function]}
          key=".1"
          onClick={[MockFunction]}
          title="test 2"
        />
      </ForwardRef(MenuList)>
    </ForwardRef(ClickAwayListener)>
  </Component>
</Fragment>
`;
